--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,3 +23,15 @@ Style/FrozenStringLiteralComment:
 
 Naming/MethodParameterName:
   Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
