--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.1.2
 
 Style/StringLiterals:
   Enabled: true
@@ -19,6 +19,9 @@ Style/Documentation:
   Enabled: false
 
 Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/CaseEquality:
   Enabled: false
 
 Naming/MethodParameterName:
